# APIReverse

./: .gitignore  CLAUDE.md  DOC-RECONCILIATION.md  IMPLEMENTATION-ROADMAP.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: PORTFOLIO-DISPOSITION.md
extension/chrome/: background.js  content.js  manifest.json
extension/firefox/: background.js  manifest.json
scripts/: setup-native-host.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native-host/: Cargo.toml
src-tauri/native-host/src/: main.rs
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: capture.rs  inference.rs  mod.rs  proxy.rs  session.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/proxy/: ca.rs  filter.rs  mitm.rs  mod.rs  normalizer.rs
src/components/: CASetupModal.tsx  CaptureBar.tsx  CollectionPreview.tsx  EndpointMap.tsx  FilterConfig.tsx  InferencePanel.tsx  OnboardingModal.tsx  RequestList.tsx  SessionManager.tsx
src/hooks/: useCapture.ts  useInference.ts  useSession.ts
src/lib/: inference.ts  postman-builder.ts  tauri.ts
src/types/: index.ts
