[workspace]
members = ["native-host"]

[package]
name = "apispy"
version = "1.0.0"
edition = "2021"

[lib]
name = "apispy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hudsucker = "0.24"
rcgen = { version = "0.13", features = ["pem", "ring"] }
rustls-pemfile = "2"
http = "1"
bytes = "1"
http-body-util = "0.1"
time = "0.3"

[dev-dependencies]
tempfile = "3"
