[package]
name = "apispy-native-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "apispy-native-host"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
chrono = "0.4"
dirs = "6"
